--- a/index.html
+++ b/index.html
@@ -8,5 +8,77 @@
   <body>
     <h1>Html Practice For Beginner...</h1>
     <hr />
+
+    <h2><mark>Heading</mark></h2>
+    <hr />
+    <h1>hello</h1>
+    <h2>hello</h2>
+    <h3>hello</h3>
+    <h4>hello</h4>
+    <h5>hello</h5>
+    <h6>hello</h6>
+    <hr />
+    <h2><mark>Paragraph</mark></h2>
+    <hr />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere sed
+      dolorem minima at saepe repudiandae veniam dolorum laudantium, itaque
+      accusantium quasi aut qui beatae corrupti sapiente quaerat dolor natus
+      quibusdam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
+      rerum vitae voluptatibus alias? Totam excepturi nihil molestias harum
+      similique veritatis, cumque expedita itaque accusantium vel voluptates
+      facere quasi nesciunt consequatur molestiae provident explicabo corrupti
+      distinctio soluta ea quas earum! Reprehenderit voluptas, doloremque nihil
+      dolore esse ex odio, velit quam rem id provident necessitatibus quod sed.
+      Consectetur doloremque, sequi odio, voluptas, similique magnam veritatis
+      officiis debitis officia quos voluptatibus eum corporis hic quas
+      excepturi. Ipsam dolor vitae, repellat ratione quaerat assumenda porro
+      obcaecati, adipisci mollitia vel accusantium. Nemo dolor, similique
+      maiores cumque nisi aut eos quam suscipit architecto deserunt? Dolorum
+      laboriosam eligendi molestiae blanditiis, aliquid unde sed debitis, cumque
+      quo ipsum obcaecati nobis accusamus, placeat ut iusto velit hic! Illo ut
+      quaerat in hic impedit culpa molestiae quae quis labore cum nostrum, non
+      obcaecati commodi qui et laudantium! Dignissimos, aliquid odit.
+      Repellendus minus eligendi ea nostrum iste sequi aspernatur ipsum
+      voluptatum optio possimus deserunt ad, labore eos, placeat quia suscipit
+      molestiae dolorem quis odio. Saepe asperiores, est officiis aut, quam in
+      cupiditate soluta corrupti veniam, laudantium amet iste? Voluptas
+      blanditiis ad neque libero porro iure tempora expedita earum, nihil
+      similique hic soluta enim quasi natus. Veritatis, quo! Aut blanditiis
+      obcaecati dolore exercitationem nesciunt, doloribus iusto inventore iure
+      eligendi aliquid qui similique laboriosam maxime saepe deserunt officiis
+      nisi itaque ex esse? Aut quos, numquam at cum molestiae quam ipsam ex
+      impedit vitae iure vero, corporis id sunt nesciunt veritatis fuga velit ea
+      perspiciatis, odio neque! Itaque sed reiciendis delectus repudiandae
+      blanditiis architecto, ipsam enim mollitia quos eligendi soluta tempora
+      quia iste amet laboriosam? Dolores unde sint consequatur autem, commodi
+      quod et eius tempore natus illo ratione cum nobis officiis dicta est?
+      Vitae sint pariatur vel rem molestiae placeat facilis asperiores laborum
+      neque voluptatibus. Assumenda porro voluptatibus magni, libero facilis
+      magnam incidunt necessitatibus.
+    </p>
+    <hr />
+    <h2><mark>Hyper Link</mark></h2>
+    <hr />
+    <h3>
+      <b><a href="#">Hyper Kink</a></b>
+    </h3>
+    <hr />
+    <h2><mark>Typography</mark></h2>
+    <hr />
+    <pre>
+    <h3>
+    <b>Bold</b>
+    <i>Italic</i>
+    <em>Emphasize</em>
+    <del>Delete</del>
+    <mark>Mark</mark>
+    X<sup>2</sup>
+    H<sub>2</sub>o
+    <ins>data</ins>
+    <strong>Strong</strong>
+    </h3>
+</pre>
+    <hr />
   </body>
 </html>
